<resources>
    <string name="app_name">Archive</string>
    <string name="book_thumbnail">Book Thumbnail</string>
    <string name="sample_book_description">Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do: once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it, “and what is the use of a book,” thought Alice “without pictures or conversations?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_book_author">Lewis Carrol</string>
    <string name="sample_book_title">Alice\'s Adventures in Wonderland</string>
    <string name="sample_book_date">Apr. 3rd 2020</string>
    <string name="detail_read_text">Read Me!</string>
    <string name="load_more">Load More</string>
</resources>